# axiom-news-summarizer

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: pypi-publish.yml
axiom_summarizer/: __init__.py  cli.py
tests/: test_summarizer.py
